packages/lustre-v6.6.103.3/test/should_fail/semantics/not_a_constant.lus
model Int 
  needs 
     const n:int;
  provides   
     type Int;
     const zero: Int;

body
type Int = bool^n;
const zero = false^n; -- n is not a constant



